# fshare

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: publish_image.yaml
src/: config.rs  error.rs  main.rs  object.rs  s3.rs  server.rs  store.rs
src/templates/: base.html  index.html  upload.html
